https://github.com/fulalsayab/Responsive-Club-Website

--- a/index.html
+++ b/index.html
@@ -16,24 +16,51 @@
             <ul>
                 <li><a href="#place">Places To Visit</a></li>
                 <li><a href="#food">Food</a></li>
+                <li><a href="#events">Events</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact"> Contact</a></li>
             </ul>
         </nav>
         <div class="title">
-            
+
         </div>
     </header>
     <!--body contents-->
-    <h1>North Carolina Hiking Club</h1>
-    <div id="events">
-        <h2>Events</h2>
+    <div class="title">
+        <h1>North Carolina Hiking Club</h1>
+        <p>Hike, Save Trails, Make Friends!</p>
     </div>
+
+
     <div id="place">
         <h2>Places To Visit</h2>
+        <div>
+            <h4>Great Smoky Mountains</h4>
+            <figure>
+                <img src="images/smoky.jpg" alt="smoky mountain">
+                <img src="images/gpirst-omni-grove-park-inn-great-smoky-mountain.jpg" alt="smoky mountain">
+                <img src="images/the-never-ending-journey.jpg" alt="smoky mountain">
+            </figure>
+
+            <figcaption>Great Smoky Mountains</figcaption>
+
+        </div>
+        <div>
+            <h4>Outer Banks</h4>
+            <figure>
+                <img src="images/download.jpeg" alt="Outer Banks">
+                <img src="images/Hero1_Shutterstock_377693482_SouthernATLRoad_KittyHawk_Web72DPI.jpg" alt="Outer Banks">
+                <img src="images/images.jpeg" alt="Outer Banks">
+            </figure>
+
+            <figcaption>Outer Banks</figcaption>
+        </div>
     </div>
     <div id="food">
         <h2>Food In North Carolina</h2>
+    </div>
+    <div id="events">
+        <h2>Events</h2>
     </div>
     <div id="about">
         <h2>Abou Us</h2>
@@ -42,9 +69,9 @@
 <footer class="footernav" id="contact">
     <h3>Contact Information</h3>
     <nav>
-        <li>Email:</li>
-        <li>Adress:</li>
-        <li>phone:</li>
+        <li>Email: hiking@email.com</li>
+        <li>Adress: North Carolina USA</li>
+        <li>Phone: 555-5555-555</li>
     </nav>
 </footer>
 
