adding all the divs and their css ruls

--- a/index.html
+++ b/index.html
@@ -57,13 +57,22 @@
         </div>
     </div>
     <div id="food">
-        <h2>Food In North Carolina</h2>
+        <div class="food">
+            <h2>Food In North Carolina</h2>
+            <p>Smoky ribs, fresh-caught shrimp and plucked-from-the-tree peaches are just a few of the most-iconic
+                treats that await in
+                North Carolina.</p>
+                <img src="images/bbqresized.jpg" alt="moky ribs">
+        </div>
+
     </div>
     <div id="events">
         <h2>Events</h2>
+        <p>comming soon...</p>
     </div>
     <div id="about">
         <h2>Abou Us</h2>
+        <p>We are just doing a dummy website for fun!!</p>
     </div>
 </body>
 <footer class="footernav" id="contact">
